--- a/.config/starship/starship.toml
+++ b/.config/starship/starship.toml
@@ -17,7 +17,7 @@ $time\
 \n$character"""
 
 [directory]
-style = "fg:#e3e5e5 bg:#769ff0"
+style = "bold fg:#000000 bg:#769ff0"
 format = "[ $path ]($style)"
 truncation_length = 3
 truncation_symbol = "…/"
