--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -8,11 +8,11 @@ live_config_reload = true
 decorations = "Transparent"
 opacity = 0.9
 # blur = true
-padding = { x = 5, y = 25 }
+# padding = { x = 5, y = 25 }
 
 [font]
 normal = { family = "GohuFont uni14 Nerd Font Mono", style = "Regular" }
-size = 14 
+size = 13 
 
 [colors.primary]
 # background = "#1e2930"
