--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -28,7 +28,7 @@ monitor=,preferred,auto,auto
 $terminal = kitty
 $fileManager = thunar
 $menu = rofi -show drun
-$browser = firefox
+$browser = zen-browser
 $random_wallpaper = ~/.config/hypr/scripts/random_wall.sh
 
 
@@ -55,6 +55,9 @@ exec-once = hypridle
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
+
+env = GTK_THEME,Adwaita:dark
+
 
 
 ###################
@@ -241,6 +244,10 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod SHIFT, F,fullscreen, 2
 
+# screenshot
+bind = $mainMod SHIFT, S, exec, grim -g "$(slurp)" - | wl-copy
+
+
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
@@ -272,8 +279,8 @@ bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+# bind = $mainMod, S, togglespecialworkspace, magic
+# bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
