--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -29,6 +29,7 @@ $terminal = kitty
 $fileManager = thunar
 $menu = rofi -show drun
 $browser = zen-browser
+$syncthing = xdg-open http://localhost:8384
 $random_wallpaper = ~/.config/hypr/scripts/random_wall.sh
 
 
@@ -236,6 +237,7 @@ bind = $mainMod, RETURN, exec, $terminal
 bind = $mainMod, Q, killactive,
 bind = $mainMod, W, exec, $random_wallpaper
 bind = $mainMod, B, exec, $browser
+bind = $mainMod SHIFT, B, exec, $syncthing
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
@@ -246,7 +248,6 @@ bind = $mainMod SHIFT, F,fullscreen, 2
 
 # screenshot
 bind = $mainMod SHIFT, S, exec, grim -g "$(slurp)" - | wl-copy
-
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
