add quickshell config, conf updates

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -31,6 +31,7 @@ $menu = rofi -show drun
 $browser = zen-browser
 $syncthing = xdg-open http://localhost:8384
 $random_wallpaper = ~/.config/hypr/scripts/random_wall.sh
+$notes = obsidian
 
 
 #################
@@ -45,8 +46,9 @@ $random_wallpaper = ~/.config/hypr/scripts/random_wall.sh
 # exec-once = waybar & hyprpaper & firefox
 exec-once = swww-daemon
 exec-once = $random_wallpaper
-exec-once = waybar
 exec-once = hypridle
+exec-once = systemctl --user start hyprpolkitagent
+exec-once = quickshell
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -111,7 +113,7 @@ decoration {
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
-    inactive_opacity = 1.0
+    inactive_opacity = 0.8
 
     shadow {
         enabled = true
@@ -124,7 +126,7 @@ decoration {
     blur {
         enabled = true
         size = 3
-        passes = 1
+        passes = 2
 
         vibrancy = 0.1696
     }
@@ -237,6 +239,7 @@ bind = $mainMod, RETURN, exec, $terminal
 bind = $mainMod, Q, killactive,
 bind = $mainMod, W, exec, $random_wallpaper
 bind = $mainMod, B, exec, $browser
+bind = $mainMod, N, exec, $notes
 bind = $mainMod SHIFT, B, exec, $syncthing
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
