--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -16,6 +16,8 @@
 
 # See https://wiki.hypr.land/Configuring/Monitors/
 monitor=,preferred,auto,auto
+# for rotation, see: https://wiki.hypr.land/Configuring/Monitors/#rotating
+# monitor = HDMI-A-1, 1920x1080@60, 0x0, 1, transform, 1
 
 
 ###################
