--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -251,7 +251,9 @@ bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod SHIFT, F,fullscreen, 2
 
 # screenshot
-bind = $mainMod SHIFT, S, exec, grim -g "$(slurp)" - | wl-copy
+# bind = $mainMod SHIFT, S, exec, grim -g "$(slurp)" - | wl-copy
+bind = $mainMod SHIFT, S, exec, grim -g "$(slurp)" - | tee >(wl-copy) | swappy -f -
+
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
