--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -17,7 +17,7 @@
 # See https://wiki.hypr.land/Configuring/Monitors/
 monitor=,preferred,auto,auto
 # for rotation, see: https://wiki.hypr.land/Configuring/Monitors/#rotating
-# monitor = HDMI-A-1, 1920x1080@60, 0x0, 1, transform, 0
+monitor = eDP-1, 1920x1080@60, 0x0, 1, transform, 0
 
 ###################
 ### MY PROGRAMS ###
@@ -250,6 +250,17 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod SHIFT, F,fullscreen, 2
 
+# monitor bindings
+bind = $mainMod SHIFT, W,submap,rotateMonitor
+submap=rotateMonitor
+bind = , up, exec, hyprctl keyword monitor "eDP-1, 1920x1080@60, 0x0, 1, transform, 0"
+bind = , left, exec, hyprctl keyword monitor "eDP-1, 1920x1080@60, 0x0, 1, transform, 3"
+bind = , down, exec, hyprctl keyword monitor "eDP-1, 1920x1080@60, 0x0, 1, transform, 1"
+bind = , right, exec, hyprctl keyword monitor "eDP-1, 1920x1080@60, 0x0, 1, transform, 2"
+bind = , escape,submap,reset
+submap=reset
+
+
 # screenshot
 # bind = $mainMod SHIFT, S, exec, grim -g "$(slurp)" - | wl-copy
 bind = $mainMod SHIFT, S, exec, grim -g "$(slurp)" - | tee >(wl-copy) | swappy -f -
@@ -260,6 +271,9 @@ bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
+
+bind = Alt, Tab, cyclenext
+bind = Alt SHIFT, Tab, cyclenext, prev
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -296,6 +310,16 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+## resize via keyboard
+bind = $mainMod SHIFT, R,submap,resize
+submap=resize
+binde = , right, resizeactive, 10 0
+binde = , left, resizeactive, -10 0
+binde = , up, resizeactive, 0 -10
+binde = , down, resizeactive, 0 10
+bind = , Escape,submap,reset
+submap=reset
+
 
 # Laptop multimedia keys for volume and LCD brightness
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
