--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -9,15 +9,36 @@
 # Create your files separately and then link them to this file like this:
 # source = ~/.config/hypr/myColors.conf
 
+$mainMod = SUPER # Sets "Windows" key as main modifier
 
 ################
 ### MONITORS ###
 ################
 
 # See https://wiki.hypr.land/Configuring/Monitors/
-monitor=,preferred,auto,auto
+$monitor1 = DP-1
+$monitor1Scale = 1
+$monitor2 = eDP-1
+$monitor2Scale = 1
 # for rotation, see: https://wiki.hypr.land/Configuring/Monitors/#rotating
-monitor = eDP-1, 1920x1080@60, 0x0, 1, transform, 0
+monitor = $monitor1, 1920x1080@60, 1920x0, $monitor1Scale, transform, 0 
+monitor = $monitor2, 1920x1080@60, 0x0, $monitor2Scale, transform, 0
+
+# monitor bindings
+# moving workspace to other monitors
+bind = $mainMod, Comma, movecurrentworkspacetomonitor, l
+bind = $mainMod, Period, movecurrentworkspacetomonitor, r
+
+# monitor rotation bindings
+bind = $mainMod SHIFT, W,submap,rotateMonitor
+submap=rotateMonitor
+bind = , up, exec, hyprctl keyword monitor "$monitor1, 1920x1080@60, 0x0, $monitor1Scale, transform, 0"
+bind = , left, exec, hyprctl keyword monitor "$monitor1, 1920x1080@60, 0x0, $monitor1Scale, transform, 3"
+bind = , down, exec, hyprctl keyword monitor "$monitor1, 1920x1080@60, 0x0, $monitor1Scale, transform, 1"
+bind = , right, exec, hyprctl keyword monitor "$monitor1, 1920x1080@60, 0x0, $monitor1Scale, transform, 2"
+bind = , escape,submap,reset
+submap=reset
+
 
 ###################
 ### MY PROGRAMS ###
@@ -233,7 +254,6 @@ device {
 ###################
 
 # See https://wiki.hypr.land/Configuring/Keywords/
-$mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod, RETURN, exec, $terminal
@@ -249,16 +269,6 @@ bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod SHIFT, F,fullscreen, 2
-
-# monitor bindings
-bind = $mainMod SHIFT, W,submap,rotateMonitor
-submap=rotateMonitor
-bind = , up, exec, hyprctl keyword monitor "eDP-1, 1920x1080@60, 0x0, 1, transform, 0"
-bind = , left, exec, hyprctl keyword monitor "eDP-1, 1920x1080@60, 0x0, 1, transform, 3"
-bind = , down, exec, hyprctl keyword monitor "eDP-1, 1920x1080@60, 0x0, 1, transform, 1"
-bind = , right, exec, hyprctl keyword monitor "eDP-1, 1920x1080@60, 0x0, 1, transform, 2"
-bind = , escape,submap,reset
-submap=reset
 
 
 # screenshot
