hyprland conf and migrate snippet engine
- add special workspace hyprland
- migrate from vsnip to ultisnips
- add commenting plugin

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -310,8 +310,8 @@ bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Example special workspace (scratchpad)
-# bind = $mainMod, S, togglespecialworkspace, magic
-# bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+bind = $mainMod, C, togglespecialworkspace, magic
+bind = $mainMod SHIFT, C, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
@@ -360,3 +360,11 @@ windowrule = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+
+# VSCode transparent
+windowrulev2 = float, opacity:0.85, class:Code
+windowrulev2 = opacity:0.85, class:obsidian
+windowrulev2 = opacity 0.9 override 0.5 override 0.8 override, class:Code
+windowrulev2 = opacity 0.9 override 0.5 override 0.8 override, class:obsidian
+
+
