fixed config for new hyprland update

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -238,7 +238,6 @@ input {
 
 # https://wiki.hypr.land/Configuring/Variables/#gestures
 gestures {
-    workspace_swipe = false
 }
 
 # Example per-device config
@@ -361,9 +360,7 @@ windowrule = suppressevent maximize, class:.*
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
-# VSCode transparent
-windowrulev2 = float, opacity:0.85, class:Code
-windowrulev2 = opacity:0.85, class:obsidian
+# window transparency
 windowrulev2 = opacity 0.9 override 0.5 override 0.8 override, class:Code
 windowrulev2 = opacity 0.9 override 0.5 override 0.8 override, class:obsidian
 
