Add custom notification system; lldb nvim for c++;
- Custom notification system in quickshell; replacing dunst
- hypridle notify-send update along with new notif system
- plugins added: markview w/ latex, nvim-dap for llvm, commenter
- cpp UltiSnips cp template, btop conf and lazy-lock (forgot to include previously)

--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -7,8 +7,8 @@ general {
 
 listener {
     timeout = 150
-    on-timeout = notify-send "Senpai, where are you?!"
-    on-resume = notify-send "Omg you're back senpai!!! UwU"
+    on-timeout = notify-send -i ~/.config/quickshell/notifIcons/wheresSenpaiTomoko.jpg "Senpai, where are you?!" "T_T"
+    on-resume = notify-send -i ~/.config/quickshell/notifIcons/youreBackSenpaiTomoko.jpg "❤️❤️ Omg you're back!!!" "I missed you!!! UwU"
 }
 
 listener {
