--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -227,7 +227,8 @@ input {
     repeat_delay = 200
     repeat_rate = 50
 
-    follow_mouse = 1
+    follow_mouse = 0
+    float_switch_override_focus = 0
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
@@ -352,16 +353,17 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 # See https://wiki.hypr.land/Configuring/Workspace-Rules/ for workspace rules
 
 # Example windowrule
-# windowrule = float,class:^(kitty)$,title:^(kitty)$
 
 # Ignore maximize requests from apps. You'll probably like this.
-windowrule = suppressevent maximize, class:.*
-
-# Fix some dragging issues with XWayland
-windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+windowrule = suppress_event maximize, match:class .*
 
 # window transparency
-windowrulev2 = opacity 0.9 override 0.5 override 0.8 override, class:Code
-windowrulev2 = opacity 0.9 override 0.5 override 0.8 override, class:obsidian
+windowrule = match:class Code, opacity 0.9 override 0.5 override 0.8 override
+windowrule = match:class obsidian, opacity 0.9 override 0.5 override 0.8 override
+# windowrulev2 = pin, float, class:Spotify
+windowrule = match:class com-cburch-logisim-Main, center on, tile on
+windowrule = match:class ^(com-cburch-logisim-Main)$, opacity 0.9 override 0.5 override 0.8 override
+
+
 
 
